# talentpulse-salary-ml

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt  run_pipeline.py
.github/workflows/: ci.yml
configs/: pipeline.yaml
data/raw/: README.md  jobs_dataset.xlsx
presentation/: README.md  TalentPulse_SalaryML_Henry_Dibie.pptx
reports/: benchmarking_memo.md  metrics.json
src/: config.py
src/data/: loader.py
src/evaluation/: metrics.py
src/features/: engineering.py
src/models/: train.py
tests/: test_config.py  test_loader.py  test_metrics.py  test_pipeline.py  test_train.py
