[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "talentpulse-salary-ml"
version = "1.0.0"
description = "End-to-end ML regression pipeline for tech job market salary prediction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "HenryMorganDibie" }
]
keywords = ["machine-learning", "salary-prediction", "regression", "hr-analytics"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "scipy>=1.12",
  "statsmodels>=0.14",
  "openpyxl>=3.1",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
]

[project.scripts]
talentpulse-pipeline = "run_pipeline:main"

[project.urls]
Repository = "https://github.com/HenryMorganDibie/talentpulse-salary-ml"
Issues = "https://github.com/HenryMorganDibie/talentpulse-salary-ml/issues"

# ── Ruff (linter) ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes (unused imports, undefined names)
  "I",    # isort (import ordering)
  "UP",   # pyupgrade
  "B",    # flake8-bugbear (common bugs)
  "C4",   # flake8-comprehensions
]
ignore = [
  "E501",  # line-length handled by formatter
  "B006",  # mutable default arguments — we use them intentionally in some places
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]  # allow unused imports in test files

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit   = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under   = 80
